--- a/index.html
+++ b/index.html
@@ -2,12 +2,18 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+   
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
+  
+    <title>Vite App1</title>
   </head>
   <body>
-    <div id="app"></div>
+    <h1>Donut shop</h1>
+    
+    <div id="donutContainer">hello</div>
+    <h2>Cart</h2>
+    <div id="cart"></div>
+
     <script type="module" src="/main.js"></script>
   </body>
 </html>
