--- a/index.html
+++ b/index.html
@@ -4,16 +4,24 @@
     <meta charset="UTF-8" />
    
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
   
     <title>Vite App1</title>
   </head>
   <body>
+    <main>
+
+   
     <h1>Donut shop</h1>
     
     <div id="donutContainer">hello</div>
     <h2>Cart</h2>
     <div id="cart"></div>
+    
+    <div id="penn"></div>
+  
 
     <script type="module" src="/main.js"></script>
+  </main>
   </body>
 </html>
